--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Python38\\python.exe"
+    "python.pythonPath": "C:\\Users\\TW2541\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
