--- a/.gitignore
+++ b/.gitignore
@@ -178,6 +178,7 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,windows,vscode
 Semester_2/Map/16cross_TLS/trips.trips.xml
+Semester_2/Map/4cross_TLS/trips.trips.xml
 4cross_TLS/trips.trips.xml
 16cross_TLS/trips.trips.xml
 36cross_TLS/trips.trips.xml
