--- a/.gitignore
+++ b/.gitignore
@@ -179,6 +179,9 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/python,windows,vscode
 Semester_2/Map/16cross_TLS/trips.trips.xml
 Semester_2/Map/4cross_TLS/trips.trips.xml
+fluk/map/4-way/trips.trips.xml
+fluk/map/4-way/4-way.rou.alt.xml
+fluk/map/4-way/4-way.rou.xml
 4cross_TLS/trips.trips.xml
 16cross_TLS/trips.trips.xml
 36cross_TLS/trips.trips.xml
