--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,9 @@ Semester_2/map/4-way/Rou_File/Period_1/trips.trips.xml
 Semester_2/map/4-way/Rou_File/Period_1/Period_1.rou.xml
 Semester_2/map/4-way/Rou_File/Period_1/Period_1.rou.alt.xml
 Semester_2/map/4-way/e1.xml
+
+Semester_2/map/16-way/Rou_File/Period_0_5/trips.trips.xml
+Semester_2/map/16-way/Rou_File/Period_0_5/Period_0_5.rou.xml
+Semester_2/map/16-way/Rou_File/Period_0_5/Period_0_5.rou.alt.xml
+
+
