state,action fixed

--- a/.gitignore
+++ b/.gitignore
@@ -196,6 +196,4 @@ Semester_1/64cross_TLS/4_4Cross.rou.alt.xml
 Semester_2/map/4-way/Rou_File/Period_1/trips.trips.xml
 Semester_2/map/4-way/Rou_File/Period_1/Period_1.rou.xml
 Semester_2/map/4-way/Rou_File/Period_1/Period_1.rou.alt.xml
-
-
-
+Semester_2/map/4-way/e1.xml
