Split runner file and add weight 16way file

--- a/.gitignore
+++ b/.gitignore
@@ -201,4 +201,6 @@ Semester_2/map/16-way/Rou_File/Period_0_5/trips.trips.xml
 Semester_2/map/16-way/Rou_File/Period_0_5/Period_0_5.rou.xml
 Semester_2/map/16-way/Rou_File/Period_0_5/Period_0_5.rou.alt.xml
 
+Semester_2/map/16-way/Rou_File/Period_1
+
 Semester_2/map/4-way/e1.xml
