Add map 36-way setup and reduce size map 16-way

--- a/.gitignore
+++ b/.gitignore
@@ -203,6 +203,8 @@ Semester_2/map/4-way/Rou_File/Period_2/
 Semester_2/map/16-way/Rou_File/Period_0_5
 Semester_2/map/16-way/Rou_File/Period_1
 
+Semester_2/map/36-way/Rou_File/Period_1
+
 Semester_2/map/4-way/e1.xml
 Semester_2/map/16-way/e1.xml
 
