--- a/.gitignore
+++ b/.gitignore
@@ -200,7 +200,7 @@ Semester_2/map/4-way/Rou_File/Period_1.5/
 Semester_2/map/4-way/Rou_File/Period_2/
 
 
-Semester_2/map/16-way/Rou_File/Period_0_5
+Semester_2/map/16-way/Rou_File/Period_0.5
 Semester_2/map/16-way/Rou_File/Period_1
 
 Semester_2/map/36-way/Rou_File/Period_1
